--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     // "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
-    "target": "esnext",
+    "target": "es2016",
     "module": "ESNext",
     /* Modules */
     // "module": "umd",                                /* Specify what module code is generated. */
