--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
     "target": "es2016",
-    "module": "ESNext",
+    "module": "CommonJS",
     /* Modules */
     // "module": "umd",                                /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
